-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: core-libs
-
b10
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8263786 | 11.0.12 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
There seems to be an early return in Java_sun_nio_ch_sctp_SctpChannelImpl_receive0 that misses freeing memory.
Sonar reports :
https://sonarcloud.io/project/issues?id=shipilev_jdk&languages=c&open=AXck8Cl0BBG2CXpcnjFu&resolved=false&severities=BLOCKER&types=BUG
Potential leak of memory pointed to by 'newBuf'
Sonar reports :
https://sonarcloud.io/project/issues?id=shipilev_jdk&languages=c&open=AXck8Cl0BBG2CXpcnjFu&resolved=false&severities=BLOCKER&types=BUG
Potential leak of memory pointed to by 'newBuf'
- backported by
-
JDK-8263786 (sctp) free memory in early return in Java_sun_nio_ch_sctp_SctpChannelImpl_receive0
-
- Resolved
-
- relates to
-
JDK-8261791 (sctp) handleSendFailed in SctpChannelImpl.c potential leaks
-
- Resolved
-